export enum RoomType {
    OFFICE = 'office',
    AMPHITHEATER = 'amphitheater',
    LABORATORY = 'laboratory',
    CLASSROOM = 'classroom',
    OTHER = 'other'
}
